@@ -427,10 +427,6 @@
                         <suiteXmlFiles>
                             <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
-                        <argLine>
-                            --add-opens=java.base/java.lang=ALL-UNNAMED
-                            --add-opens=java.base/java.util=ALL-UNNAMED
-                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
